--- a/workflows/singlecellrna/seurat_scripts/analyse_filtered.Rmd
+++ b/workflows/singlecellrna/seurat_scripts/analyse_filtered.Rmd
@@ -7,7 +7,6 @@ output:
   df_print: paged
 params:
   input_path: input_path
-  cell_cycle_file_path: cell_cycle_file_path
 ---
 
 ```{r setup, include=FALSE}
@@ -29,7 +28,7 @@ library(mvoutlier)
 load(file = aggregated_path)
 ```
 
-## Normalize with cell cycle effect removal
+## Normalize
 
 ```{r normalize}
 aggregated_samples = PercentageFeatureSet(aggregated_samples, pattern = "^MT-", col.name = "percent.mt")
@@ -63,20 +62,15 @@ aggregated_samples = FindClusters(aggregated_samples)
 VlnPlot(aggregated_samples, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), group.by = 'orig.ident', ncol = 3, pt.size = 0)
 
 cells = c()
-for (ident in unique(Idents(aggregated_samples))) {
-  seurat_object = SubsetData(aggregated_samples, ident.use = ident)
-  
-  x = seurat_object@meta.data[ , c("nFeature_RNA","nCount_RNA","percent.mt")]
-  outliers = aq.plot(x, delta=qchisq(0.975, df = ncol(x)))
-  
-  outliers_index = which(unlist(outliers))
-  outliers_names = rownames(x)[outliers_index]
-  all_cells = WhichCells(seurat_object)
-  new_cells = setdiff(all_cells, outliers_names)
-  cells = c(cells, new_cells)
-  dev.off()
-  gc()
-}
+x = aggregated_samples@meta.data[ , c("nFeature_RNA","nCount_RNA","percent.mt")]
+outliers = aq.plot(x, delta=qchisq(0.975, df = ncol(x)))
+outliers_index = which(unlist(outliers))
+outliers_names = rownames(x)[outliers_index]
+all_cells = WhichCells(aggregated_samples)
+cells = setdiff(all_cells, outliers_names)
+dev.off()
+gc()
+
 ```
 
 ## Reload data
@@ -90,7 +84,13 @@ aggregated_samples = SubsetData(aggregated_samples, cells = cells)
 
 ```{r normalize2}
 aggregated_samples = PercentageFeatureSet(aggregated_samples, pattern = "^MT-", col.name = "percent.mt")
-aggregated_samples = SCTransform(aggregated_samples, verbose = FALSE)
+
+s.genes <- cc.genes.updated.2019$s.genes
+g2m.genes <- cc.genes.updated.2019$g2m.genes
+aggregated_samples <- CellCycleScoring(aggregated_samples, s.features = s.genes, g2m.features = g2m.genes, set.ident = TRUE)
+aggregated_samples$CC.Difference <- aggregated_samples$S.Score - aggregated_samples$G2M.Score
+aggregated_samples = SCTransform(aggregated_samples, vars.to.regress = "CC.Difference", verbose = FALSE)
+
 aggregated_samples = RunPCA(aggregated_samples)
 ```
 
