--- a/workflows/singlecellrna/seurat_scripts/analyse_filtered.Rmd
+++ b/workflows/singlecellrna/seurat_scripts/analyse_filtered.Rmd
@@ -19,7 +19,6 @@ knitr::opts_chunk$set(echo = TRUE)
 options(warn=-1)
 
 aggregated_path = params$input_path
-output_path = paste(params$input_path, '/aggregated_object_analyzed_unfiltered', sep = '')
 
 library(Seurat)
 library(dplyr)
@@ -147,5 +146,5 @@ DoHeatmap(aggregated_samples, features = top10$gene) + NoLegend()
 ## Save file
 
 ```{r saving}
-save(aggregated_samples, file = output_path)
+save(aggregated_samples, file = "aggregated_object_analyzed_filtered.RData")
 ```
